Se agrega boton de salir en el index que te redirige al login

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <header>
     <h2>Sebastián Silva Developer</h2>
     <img src="fotoPerfil.jpeg" alt="fotoperfil">
+    <ul class="dropdown-menu dropdown-menu-lg-end">
+        <li><a class="dropdown-item" id="deslogear" href="#">Salir</a></li>
+        </ul>
 </header>
 <hr>
 <h2 id="conocimientos">Mis conocimientos</h2>
